apps/webhook_router/src/adapters/snapshots/webhook_router__adapters__dingtalk__tests__adapters_dingtalk_uem_to_egress_with_title.snap
---
source: apps/webhook_router/src/adapters/dingtalk.rs
expression: "json!({ \"content_type\": payload.content_type, \"body\": payload.body, })"
---
body:
  markdown:
    text: "# My Title\n\nhello"
    title: My Title
  msgtype: markdown
content_type: application/json
